[gd_scene load_steps=5 format=3 uid="uid://4v42vv7hma02"]

[ext_resource type="Script" path="res://System/Menu/MainMenu/GD_MainMenu.gd" id="1_htd4f"]
[ext_resource type="FontFile" uid="uid://deynq3w2tsjig" path="res://Assets/Font/VCR_OSD_MONO_1.001.ttf" id="2_ridf8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28b7g"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pc5o0"]
bg_color = Color(0.709804, 0.709804, 0.709804, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_htd4f")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.87451, 0.87451, 0.87451, 1)

[node name="Continue" type="Button" parent="."]
offset_left = 1291.0
offset_top = 382.0
offset_right = 1734.0
offset_bottom = 462.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ridf8")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_28b7g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pc5o0")
text = "Continue"

[node name="LevelSelect" type="Button" parent="."]
offset_left = 1291.0
offset_top = 480.0
offset_right = 1734.0
offset_bottom = 560.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ridf8")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_28b7g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pc5o0")
text = "Select Level"

[node name="Quit" type="Button" parent="."]
offset_left = 1291.0
offset_top = 578.0
offset_right = 1734.0
offset_bottom = 658.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ridf8")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_28b7g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pc5o0")
text = "Quit
"

[node name="Label" type="Label" parent="."]
offset_left = 1174.0
offset_top = 248.0
offset_right = 1734.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ridf8")
theme_override_font_sizes/font_size = 96
text = "Game Title"
horizontal_alignment = 2

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
